# t2r2

./: .gitignore  CONFIG_README.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json  devcontainer.json.template
.github/workflows/: build.yml  check.yml  ci.yml  upload.yml
baseline/: bert-classification-demo.ipynb  config.yaml
notebooks/demo/: config.yaml  demo.ipynb
notebooks/demo copy/: config.yaml
notebooks/demo mlflow part2/: demo.ipynb
notebooks/demo_curriculum_learning/: cl_selector.py  config.yaml  demo.ipynb
notebooks/demo_data_cartography/: config.yaml  config_experiments_from_data_cartography_results.yaml  config_run_data_cartography.yaml  demo_data_cartography.ipynb
notebooks/demo_data_root/: config.yaml  demo.ipynb
notebooks/demo_defaults/: config.yaml  demo.ipynb
notebooks/demo_device/: config.yaml  config_device.yaml  demo.ipynb
notebooks/demo_dvc/: config.yaml  demo.ipynb
notebooks/demo_llm/: config.yaml  demo.ipynb
notebooks/demo_mlflow/: config.yaml  demo.ipynb
notebooks/demo_mlflow_registry/: demo.ipynb
notebooks/demo_optimizer/: config.yaml  demo.ipynb
notebooks/demo_slicing/: config.yaml  demo_slicing.ipynb
notebooks/demo_user_selector/: config.yaml  demo.ipynb  user_selector.py  users_selector.py
notebooks/poc/: config.yaml  poc.ipynb
notebooks/seed_determinism/: config123.yaml  config456.yaml  demo123.ipynb  demo123_prime.ipynb  demo456.ipynb
src/enginora/: flow.py  (+2 more)
tests/: config.yaml  test_config.py  test_metrics.py  test_selectors.py
(+101 files in other folders)
