[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t2r2"
version = "0.0.1"
authors = [
    { name = "Radosław Winiecki", email = "radoslaw.winiecki@student.put.poznan.pl" },
    { name = "Nina Żukowska", email = "nina.zukowska@student.put.poznan.pl" },
    { name = "Oskar Szudzik", email = "oskar.szudzik@student.put.poznan.pl" },
    { name = "Antoni Solarski", email = "antoni.solarski@student.put.poznan.pl" },
]
description = "T2R2: train, test, record, repeat: incremental environment for AI model training"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/radswn/t2r2"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
